--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,25 @@
-.not{
-  display: flex;
-  list-style: decimal;
-  list-style-type: black;
-  background-color: white;
-  padding: 15px;
+.itens{
+  background-color: #fff;
   border-style: solid;
-  border-width: 1px;
   border-color: #c2c2c2;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  width: 300px;
-
-}
-
-.p{
-  font-weight: bold;
-}
-.li{
+  border-width: 0px;
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  width: 50px;
+  border-radius: 5%;
+  margin: 10px;
   
-  text-decoration: none;
 }
-.lista{
-  color: red;
-  text-align: justify;
-
+.itens:hover{
+  color: rgb(61, 61, 61);
+}
+.fotos{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+.componente{
+    display: flex;
+    
 }
